# GW_2_app_flask

./: .gitignore
backend/: app.py  foul_prediction_model.pkl  label_encoders.pkl  pyproject.toml
frontend/src/: App.css  App.tsx
