[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "joblib>=1.5.0",
    "lightgbm>=4.6.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.2",
]
